# digital-edition-editor

./: .coveragerc  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yml  CHANGES.md  LICENSE  Pipfile  README.md  babel.cfg  build.sh  digi_edit.sqlite-journal  gulpfile.js  notes.txt  package-lock.json  package.json  prepare_release.py  pyproject.toml  pytest.ini  tox.ini
.github/workflows/: build-docker.yml  deploy-base-docker.yml  deploy-gutzkow-docker.yml
client/: .eslintrc.js  ember-cli-build.js  package-lock.json  package.json
client/app/: index.html  router.js
client/config/: environment.js
digi_edit/: __init__.py  __main__.py  utils.py
digi_edit/cli/: __init__.py  admin.py  app.py
digi_edit/models/: __init__.py  branch.py  meta.py  user.py
digi_edit/server/: __init__.py
digital_edition_editor/: deploy_settings.py  jinja2.py  server_settings.py  settings.py  urls.py  wsgi.py
docker/: Dockerfile  start_digi_edit.sh
docker/base/: Dockerfile  start_digi_edit.sh
docker/gutzkow/: Dockerfile  customisation.css  production.ini  tei_schema.json
docs/: conf.py  index.rst  overview.rst  processes.rst
docs/_static/: custom.css
docs/editor/: global_comments.rst  index.rst  individual_comments.rst  main_text.rst  markup.rst  metadata.rst  tei-editor.rst
docs/processes/: cancel_integration.rst  delete_task.rst  logging_in.rst  new_task.rst  update_task.rst  work_on_file.rst  work_on_task.rst
editor/: admin.py  urls.py
editor/jinja2/: base.jinja2
editor/migrations/: 0001_initial.py  0002_repository_gitlab_api.py  0003_auto_20190401_1320.py
editor/models/: __init__.py  repository.py
editor/views/: __init__.py  files.py  help.py  repository.py
locale/: compile-translations.sh  django.pot
old/: Pipfile  build.sh  db.sqlite3  gulpfile.js  manage.py
old/digi_edit/: __init__.py  routes.py
old/locale/: update-translations.sh
old/theme/: _aria-menu.scss  _header.scss  _main-menu.scss  _tei-editor.scss  _tree-view.scss
server/: .coveragerc  .gitignore  MANIFEST.in  Pipfile  README.txt  build.sh  pytest.ini  setup.py
theme/: _aria-menu.scss  _generic.scss  _help.scss  _icons.scss  _loading.scss  _tei-editor.scss  app.scss
(+370 files in other folders)
