[tool.poetry]
name = "digi_edit"
version = "0.16.7"
description = "A web-based environment for editing a Digital Edition"
authors = ["Mark Hall <mark.hall@work.room3b.eu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pyramid = "^1.10.4"
pyramid-jinja2 = "^2.8"
pyramid-tm = "^2.4"
sqlalchemy = "^1.3.18"
transaction = "^3.0.0"
waitress = "^1.4.4"
click = "^7.1.2"
pyramid-nacl-session = "^0.3"
decorator = "^4.4.2"
cerberus = "^1.3.2"
email-validator = "^1.1.1"
inflect = "^4.1.0"
pwh_pyramid_session = "^1.0.0"
pwh_permissions = "^1.3.0"
pwh_pyramid_routes = "^1.0.0"
"zope.sqlalchemy" = "^1.3"
sqlalchemy_json = "^0.4.0"
gitpython = "^3.1.7"
pygithub = "^1.51"
psycopg2 = {version = "^2.8.5", optional = true}
python-gitlab = "^2.4.0"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"
flake8-print = "^3.1.4"
pre-commit = "^2.6.0"
pyramid_debugtoolbar = "^4.6.1"
pylint = "^2.5.3"
sphinx = "^3.2.1"
rstcheck = "^3.3.1"

[tool.poetry.extras]
postgresql = ["psycopg2"]

[tool.poetry.scripts]
digi_edit = "digi_edit.scripts:main"

[tool.poetry.plugins."paste.app_factory"]
main = "digi_edit:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
