[tool.poetry]
name = "digi_edit"
version = "1.1.0b5"
description = "A web-based environment for editing a Digital Edition"
authors = ["Mark Hall <mark.hall@work.room3b.eu>"]
license = "MIT"
include = ["digi_edit/server/frontend/public/build/**/*"]
exclude = ["digi_edit/server/frontend/src", "digi_edit/server/frontend/*.*"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"
asyncpg = "^0.26.0"
SQLAlchemy = {extras = ["asyncio"], version = "^1.4.39"}
Cerberus = "^1.3.4"
aiosqlite = "^0.17.0"
sqlalchemy-json = "^0.5.0"
tornado = "^6.2"
bcrypt = "^3.2.2"
GitPython = "^3.1.27"
python-gitlab = "^3.8.0"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
flake8-print = "^5.0.0"
pre-commit = "^2.19.0"
pylint = "^2.14.4"
Sphinx = "^5.0.2"
rstcheck = "^6.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
